typo: font-size

--- a/public/details.html
+++ b/public/details.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="font-NunitoSans font-medium text-[16px] text-veryDarkBlueText bg-veryLightGray dark-transition">
+<body class="text-base font-medium font-NunitoSans text-veryDarkBlueText bg-veryLightGray dark-transition">
     
     <header>
         <div class="header bg-white dark-transition fixed w-full top-0 z-10 flex justify-between items-center py-8 px-[4vw] box-shadow lg:py-4">
