--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="text-sm font-medium font-NunitoSans text-veryDarkBlueText bg-veryLightGray dark-transition">
+<body class="text-base font-medium font-NunitoSans text-veryDarkBlueText bg-veryLightGray dark-transition">
 
     <header>
         <div class="header bg-white dark-transition fixed w-full top-0 z-10 flex justify-between items-center py-8 px-[4vw] box-shadow lg:py-4">
@@ -30,7 +30,7 @@
     
     <main>
         <div class="px-[4vw] mt-[7rem] lg:mt-[5.5rem]">
-            <div class="flex flex-col gap-10 md:flex-row md:justify-between">
+            <div class="flex flex-col gap-10 text-sm md:flex-row md:justify-between">
                 <div class="relative w-full h-fit"> <!-- Search Box -->
 
                     <!-- Search icon -->
