Accessibility:\n 1. Made button unfocusable and toggled the state afterwards for allow aria-hidden to funtion effectively\n2. Assigned a level one heading to the pages

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header bg-white dark-transition fixed w-full top-0 z-10 flex justify-between items-center py-8 px-[4vw] box-shadow lg:py-4">
             <div>
-                <span class="font-extrabold sm:text-lg lg:text-xl xl:text-2xl">Where in the world?</span>
+                <span> <h1 class="font-extrabold sm:text-lg lg:text-xl xl:text-2xl">Where in the world? </h1> </span>
             </div>
     
             <!-- Dark mode toggle -->
@@ -58,27 +58,27 @@
                         <ul class="grid gap-2">
                             
                             <li>
-                                <button id="all" class="cursor-pointer regionn w-fit">All</button>
+                                <button tabindex="-1" id="all" class="regionn w-fit">All</button>
                             </li>
 
                             <li>
-                                <button class="cursor-pointer regionn region-btn w-fit">Africa</button>
+                                <button tabindex="-1" class="regionn region-btn w-fit">Africa</button>
                             </li>
 
                             <li>
-                                <button class="cursor-pointer regionn region-btn w-fit">Americas</button>
+                                <button tabindex="-1" class="regionn region-btn w-fit">Americas</button>
                             </li>
 
                             <li>
-                                <button class="cursor-pointer regionn region-btn w-fit">Asia</button>
+                                <button tabindex="-1" class="regionn region-btn w-fit">Asia</button>
                             </li>
 
                             <li>
-                                <button class="cursor-pointer regionn region-btn w-fit">Europe</button>
+                                <button tabindex="-1" class="regionn region-btn w-fit">Europe</button>
                             </li>
 
                             <li>
-                                <button class="cursor-pointer regionn region-btn w-fit">Oceania</button>
+                                <button tabindex="-1" class="regionn region-btn w-fit">Oceania</button>
                             </li>
                         </ul>
                    </div>
