--- a/public/details.html
+++ b/public/details.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header bg-white dark-transition fixed w-full top-0 z-10 flex justify-between items-center py-8 px-[4vw] box-shadow lg:py-4">
             <div>
-                <span class="font-extrabold sm:text-lg lg:text-xl xl:text-2xl">Where in the world?</span>
+                <span> <h1 class="font-extrabold sm:text-lg lg:text-xl xl:text-2xl">Where in the world? </h1> </span>
             </div>
     
             <!-- Dark mode toggle -->
